Fixed the margin spacing problem and added a new column next to the map

--- a/web/public/css/stylesheet.css
+++ b/web/public/css/stylesheet.css
@@ -20,8 +20,8 @@ padding-bottom: 80px;
 #ktmcontent{
 position: absolute;
 top: 50px;
-left: 80px;
-right: 80px;
+left: 100px;
+right: 100px;
 padding-bottom: 80px;
 }
 
